correct spacing behavior

--- a/src/prod/index.style.scss
+++ b/src/prod/index.style.scss
@@ -8,3 +8,24 @@ body {
 	margin: 0;
 	overflow: hidden;
 }
+
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+button,
+select,
+input {
+	@include input;
+}
+
+button {
+	cursor: pointer;
+	min-width: $dInputHeight;
+	padding: 0 0.3em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
